fix images on gallery cutting off

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -73,7 +73,6 @@ html
     display: flex
     overflow: auto
     margin: 1em calc(50% - 50vw)
-    justify-content: center
 
   section.main, article.post
     @include outer-container
